# inga-ritsu-pao

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
config/: reply_config.json  templates_x.json  templates_youtube.json  video_config.json
docs/: video_template_spec.md
src/ritsu_pao/: __init__.py  schemas.py
src/ritsu_pao/notify/: __init__.py  cli.py  slack.py
src/ritsu_pao/post/: __init__.py  cli.py  x_poster.py  youtube_uploader.py
src/ritsu_pao/publish/: __init__.py  publisher.py  sanitize.py  script_gen.py
src/ritsu_pao/reply/: __init__.py
src/ritsu_pao/video/: __init__.py  compositor.py  pipeline.py  voicevox.py
tests/: conftest.py  test_notify.py  test_publish.py  test_video.py  test_x_poster.py  test_youtube_uploader.py
